# a3-python

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  ELEVATION_PLAN.md  FP_REDUCTION_SUMMARY.md  MANIFEST.in  PAPER_EXERCISE_DIAGNOSIS.txt  README.md  State.json  TRUE_POSITIVES_pygoat.md  a3_barrier_story_presenter.aux  analyze_pygoat.py  check_confidence.py  check_div_zero.py  copilot_output.txt  debug_layer3_stdlib.py  examples.py  examples_safe.py  fix_from_bug_history.py  leak_theory.md  pyproject.toml  rise_barrier_presenter.aux  rise_barrier_presenter.vrb  run_deepspeed_with_stats.py  scan_bugfix_history_python.py  scan_bugfix_history_rust.py  test_bug_fixes.py  test_bug_fixes_round2.py  test_bug_fixes_round3.py  test_bytecode_storage.py  test_deepspeed_interprocedural.py  test_length_guards.py  test_sql_detection_directly.py  test_sql_safe.py  test_sql_vulnerable.py  understand_paper_exercise.py
a3_python/: __init__.py  __main__.py  analyzer.py  cli.py  confidence_scoring.py  fp_context.py
agential_demo/: A3_WALKTHROUGH_DECKS_README.md  README.md  a3_barrier_story_presenter.aux  a3_barrier_story_presenter.tex  a3_barrier_story_speaker.tex  a3_ci_e2e_slides.tex  a3_ci_e2e_slides.vrb  a3_walkthrough_presenter.aux  a3_walkthrough_presenter.tex  a3_walkthrough_presenter.vrb  a3_walkthrough_speaker.tex  a3_walkthrough_speaker.vrb  barrier_transition_system_example.aux  barrier_transition_system_example.snm  barrier_transition_system_example.tex  barrier_transition_system_example.vrb  demo.py  render_terminal_video.py  requirements.txt  rise_barrier_presenter.aux  rise_barrier_presenter.tex  rise_barrier_presenter.vrb  rise_barrier_speaker.aux  rise_barrier_speaker.tex  rise_barrier_speaker.vrb  rotation_barrier_pipeline.aux  (+9 more)
(+1496 files in other folders)
