[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfromscratch"
version = "0.1.0"
description = "Python semantics + barrier-certificate verifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "z3-solver>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
pyfromscratch = "pyfromscratch.cli:main"

[tool.setuptools.packages.find]
include = ["pyfromscratch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
